--- a/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Calculator/Themes/Generic.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Calculator/Themes/Generic.xaml
@@ -364,7 +364,7 @@
                                     Style="{StaticResource CalculatorDigitButtonStyle}"/>
 
             <Button Grid.Column="6" Grid.Row="4" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Div"
+                                    local:Calculator.CalculatorButtonType="Divide"
                                     Command="local:CalculatorCommands.CalculatorButtonClick"
                                     Style="{StaticResource CalculatorOperatorButtonStyle}"/>
 
@@ -389,7 +389,7 @@
                                     Style="{StaticResource CalculatorDigitButtonStyle}"/>
 
             <Button Grid.Column="6" Grid.Row="6" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Mul"
+                                    local:Calculator.CalculatorButtonType="Multiply"
                                     Command="local:CalculatorCommands.CalculatorButtonClick"
                                     Style="{StaticResource CalculatorOperatorButtonStyle}"/>
 
@@ -464,15 +464,20 @@
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
-                            <Border  Margin="0,0,0,10" Background="White" BorderBrush="#FF949494" BorderThickness="1">
+                            <Border x:Name="PART_Display" Margin="0,0,0,10" Background="White" BorderBrush="#FF949494" BorderThickness="1">
                                 <TextBlock FontSize="16"
                                            HorizontalAlignment="Right"
                                            Margin="2"
-                                           Text="{Binding Value, RelativeSource={RelativeSource TemplatedParent}}" />
+                                           Text="{Binding DisplayText, RelativeSource={RelativeSource TemplatedParent}}" />
                             </Border>
                             <ContentControl x:Name="PART_CalculatorButtonPanel" Grid.Row="1" Template="{StaticResource CalculatorButtonPanel}" DataContext="{Binding RelativeSource={RelativeSource TemplatedParent}}" />
                         </Grid>
                     </Border>
+                    <!--<ControlTemplate.Triggers>
+                        <Trigger Property="IsFocused" Value="True">
+                            <Setter TargetName="PART_Display" Property="Background" Value="#E7F5FF" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>-->
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
